--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = esp32dev
+
 [env:esp32dev]
 monitor_speed = 115200
 platform = espressif32
@@ -18,3 +21,15 @@ framework = arduino
 lib_deps = 
 	knolleary/pubsubclient@2.8
 	bblanchon/ArduinoJson@^6.20.1
+
+[env:featheresp32]
+monitor_speed = 115200
+platform = espressif32
+board = featheresp32
+board_build.mcu = esp32
+board_build.f_cpu = 240000000L
+framework = arduino
+lib_deps = 
+	knolleary/pubsubclient@2.8
+	bblanchon/ArduinoJson@^6.20.1
+
