--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32dev
+default_envs = featheresp32
 
 [env:esp32dev]
 monitor_speed = 115200
