--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -9,19 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = featheresp32
-
-[env:esp32dev]
-monitor_speed = 115200
-platform = espressif32
-board = esp32dev
-board_build.mcu = esp32
-board_build.f_cpu = 240000000L
-framework = arduino
-lib_deps = 
-	knolleary/pubsubclient@2.8
-	bblanchon/ArduinoJson@^6.20.1
-	https://github.com/me-no-dev/ESPAsyncWebServer.git
+default_envs = featheresp32_ota
 
 [env:featheresp32]
 monitor_speed = 115200
@@ -33,5 +21,22 @@ framework = arduino
 lib_deps = 
 	knolleary/pubsubclient@2.8
 	bblanchon/ArduinoJson@^6.20.1
-	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	https://github.com/me-no-dev/ESPAsyncWebServer
+	https://github.com/ayushsharma82/AsyncElegantOTA
+
+[env:featheresp32_ota]
+monitor_speed = 115200
+platform = espressif32
+board = featheresp32
+board_build.mcu = esp32
+board_build.f_cpu = 240000000L
+framework = arduino
+extra_scripts = platformio_upload.py
+upload_protocol = custom
+upload_url = http://192.168.2.101/update	#3c:61:05:4a:e4:d8
+lib_deps = 
+	knolleary/pubsubclient@2.8
+	bblanchon/ArduinoJson@^6.20.1
+	https://github.com/me-no-dev/ESPAsyncWebServer
+	https://github.com/ayushsharma82/AsyncElegantOTA
 
