--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -13,12 +13,14 @@ default_envs = featheresp32_ota
 
 [env:featheresp32]
 monitor_speed = 115200
-platform = espressif32
+platform = espressif32@6.5.0
 board = featheresp32
 board_build.mcu = esp32
 board_build.f_cpu = 240000000L
 framework = arduino
 lib_deps = 
+	Preferences
+	SPIFFS
 	knolleary/pubsubclient@2.8
 	bblanchon/ArduinoJson@^6.20.1
 	https://github.com/me-no-dev/ESPAsyncWebServer
@@ -26,15 +28,17 @@ lib_deps =
 
 [env:featheresp32_ota]
 monitor_speed = 115200
-platform = espressif32
+platform = espressif32@6.5.0
 board = featheresp32
 board_build.mcu = esp32
 board_build.f_cpu = 240000000L
 framework = arduino
 extra_scripts = platformio_upload.py
 upload_protocol = custom
-upload_url = http://192.168.2.101/update	#3c:61:05:4a:e4:d8
+upload_url = http://192.168.2.19/update	#3c:61:05:4a:e4:d8
 lib_deps = 
+	Preferences
+	SPIFFS
 	knolleary/pubsubclient@2.8
 	bblanchon/ArduinoJson@^6.20.1
 	https://github.com/me-no-dev/ESPAsyncWebServer
