Refactored, but not tested yet

--- a/firmware/.vscode/settings.json
+++ b/firmware/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "optional": "cpp",
         "system_error": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "string": "cpp",
+        "functional": "cpp"
     }
 }
