Working support for HA + improved logging

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -36,6 +36,7 @@ framework = arduino
 extra_scripts = platformio_upload.py
 upload_protocol = custom
 upload_url = http://192.168.2.19/update	#3c:61:05:4a:e4:d8
+# For filesystem upload open /upload endpoint from web browser and pick .bin image under .pio/build folder
 lib_deps = 
 	Preferences
 	SPIFFS
